--- a/app.css
+++ b/app.css
@@ -1,15 +1,41 @@
+body {
+    background-color: rgb(0, 121, 191);
+    color: #4d4d4d;
+    font: 14px "Helvetica Neue",Arial,Helvetica,sans-serif;
+    line-height: 18px;
+    padding: 20px;
+}
+
 .card{
     display: block;
-    width: 254px;
-    min-height: 100px;
-    color: #fff;
-    background-color: #494954;
-    border-radius: 8px;
+    /*width: 254px;*/
+    /*min-height: 100px;*/
+    /*color: #fff;*/
+    /*background-color: #494954;*/
+    /*border-radius: 8px;*/
+
+
+
+    background-color: #fff;
+    border-bottom: 1px solid #ccc;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-bottom: 6px;
+    max-width: 300px;
+    min-height: 20px;
+    position: relative;
+    z-index: 0
 }
 
 .card-list {
-    display: block;
+    background: #E2E4E6;
+    border-radius: 3px;
+    box-sizing: border-box;
+    max-height: 100%;
+    position: relative;
+    white-space: normal;
+    width: 300px;
+    margin-right: 10px;
+    padding: 20px;
     float: left;
-    outline: 1px solid #333;
-    margin-right: 20px;
 }
